feat: add Vaadin web UI, MCP client, restore toolChat endpoint
- Add Vaadin 25.2.6 web UI to backend module (minimal chat interface)
- Add MCP client to backend (connects to polyglot MCP server)
- Restore /edge/toolChat endpoint for MCP tool calling
- Change CLI agent port to 8081 (avoid conflict with backend)
- Update tutorial with Step 9 (Enterprise Backend)
- Update blueprint with new architecture
- Update README and AGENTS.md
- All 32 tests pass (31 CLI agent + 1 backend)