@@ -9,41 +9,39 @@
 mvn clean install
 
 # Run specific modules
-cd backend && mvn quarkus:dev      # Backend (Quarkus dev mode)
-cd polyglot && java -jar target/polyglot-runner.jar  # Polyglot runner
-cd ui && mvn javafx:run            # JavaFX UI
-cd spring-ai-cli-agent && mvn spring-boot:run  # Spring AI CLI Agent
-
-# Native image (backend or polyglot)
-cd backend && mvn package -Pnative && ./target/duke42-runner
+cd spring-ai-cli-agent && mvn spring-boot:run  # CLI Agent (port 8081)
+cd backend && mvn spring-boot:run               # Backend with Vaadin UI (port 8080)
+cd polyglot && java -jar target/polyglot-runner.jar  # Polyglot MCP server (port 9000)
 ```
 
 ### Test Commands
 
 ```bash
+# CLI Agent tests (31 tests)
+cd spring-ai-cli-agent && mvn test
+
+# Backend tests (1 test)
+cd backend && mvn test
+
 # Run all tests in a module
 mvn test
-
-# Run integration tests (requires Quarkus test profile)
-mvn verify -Dnative  # Native integration tests
 ```
 
 ## Module Structure
 
-| Module | Purpose | Key Notes |
-|--------|---------|-----------|
-| `backend/` | Quarkus REST API with LLM integration | Requires Ollama running locally (port 11434) |
-| `polyglot/` | GraalVM Python integration (MCP server) | Runs on port 9000, experimental |
-| `ui/` | JavaFX frontend | Uses AtlantaFX theme |
-| `spring-ai-cli-agent/` | Spring AI CLI Agent learning project | New direction for WeShall.build |
+| Module | Purpose | Port | Key Notes |
+|--------|---------|------|-----------|
+| `spring-ai-cli-agent/` | CLI Agent learning project | 8081 | Terminal REPL, 31 tests |
+| `backend/` | Enterprise demo (Vaadin + REST + MCP) | 8080 | Web UI + REST API |
+| `polyglot/` | GraalVM Python integration (MCP server) | 9000 | Experimental |
 
 ## Critical Quirks
 
 ### MCP Integration
 
 - Backend can use Polyglot module as MCP server on port 9000
-- **MCP config is commented out by default** in `backend/src/main/resources/application.properties`
-- To enable MCP: uncomment lines 28-29 in application.properties
+- **MCP config is disabled by default** in `backend/src/main/resources/application.yaml`
+- To enable MCP: set `spring.ai.mcp.client.enabled=true` in application.yaml
 - **Unit tests run without MCP by default** - ensures tests work without external dependencies
 - For integration tests with MCP: start polyglot module first (`java -jar target/polyglot-runner.jar`)
 
@@ -55,34 +53,33 @@ mvn verify -Dnative  # Native integration tests
 
 ### Test Dependencies
 
-- Backend tests use `@QuarkusTest` with REST-assured
+- Backend tests use `@SpringBootTest` with Mockito
 - Each test generates unique `chatId` (UUID) for isolation
-- Tests expect Ollama running locally with `llama3.2:1b` model
+- Tests expect Ollama running locally with `lfm2.5` model
 - Spring AI CLI Agent tests use JUnit 5 + AssertJ + Mockito (no Ollama required)
 
 ## Environment Requirements
 
-- Java 21+ (LTS recommended)
-- Maven 4+
-- GraalVM 21+ (for native image and polyglot)
-- Ollama CLI with models: `llama3.2:1b`, `smollm2`, `qwen3`
-- Python environment (optional, for polyglot demos)
+- Java 17+ (for Spring Boot 4)
+- Maven 3.6+
+- GraalVM 21+ (for polyglot module only)
+- Ollama CLI with model: `lfm2.5`
 
 ## Common Pitfalls
 
 1. **Forgetting Ollama**: Backend tests will fail if Ollama isn't running
 2. **MCP config disabled**: Integration tests with MCP tools won't work unless config is enabled
 3. **Polyglot build order**: Build polyglot module before running backend with MCP
-4. **Native image profile**: Use `-Pnative` flag, not just `mvn package`
+4. **Port conflicts**: CLI agent runs on 8081, backend on 8080
 5. **Module isolation**: Each module has its own `pom.xml` - run commands from module directory
 
 ## Code Conventions
 
-- Java 21+ features (records, sealed classes, pattern matching)
-- Quarkus dependency injection (CDI)
-- REST-assured for API testing
-- Maven Surefire/Failsafe for test execution
-- `--add-opens java.base/java.lang=ALL-UNNAMED` required for test JVM args
+- Java 17+ features (records, sealed classes, pattern matching)
+- Spring Boot dependency injection (CDI)
+- JUnit 5 + AssertJ for testing
+- Maven Surefire for test execution
+- Vaadin for web UI (backend module only)
 
 ## Software Factory Patterns (Adopted from softwareaifactory.sh)
 
